// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sort parameters tests Query with incorrect sort direction 1`] = `
"{
  jcr {
    searches(siteKey: \\"fake\\", language: \\"fake\\", workspace: fake) {
      search(q: \\"undefined\\", limit: 5, offset: 0, filter: {nodeType: {type: \\"fake\\"}}) {
        totalHits
        took
        facets {
          field
          type
          data {
            ... on TermValue {
              count
              value
            }
            ... on DateRangeValue {
              count
              range {
                from
                to
                name
              }
            }
          }
        }
        hits {
          id
          link
          displayableName
          excerpt
          score
          node {
            jcr_created: property(name: \\"jcr:created\\") {
              value
            }
          }
        }
      }
    }
  }
}
"
`;

exports[`Sort parameters tests Query with incorrect sort field 1`] = `
"{
  jcr {
    searches(siteKey: \\"fake\\", language: \\"fake\\", workspace: fake) {
      search(q: \\"undefined\\", limit: 5, offset: 0, filter: {nodeType: {type: \\"fake\\"}}) {
        totalHits
        took
        facets {
          field
          type
          data {
            ... on TermValue {
              count
              value
            }
            ... on DateRangeValue {
              count
              range {
                from
                to
                name
              }
            }
          }
        }
        hits {
          id
          link
          displayableName
          excerpt
          score
          node {
            jcr_created: property(name: \\"jcr:created\\") {
              value
            }
          }
        }
      }
    }
  }
}
"
`;

exports[`Sort parameters tests Query with sort 1`] = `
"{
  jcr {
    searches(siteKey: \\"fake\\", language: \\"fake\\", workspace: fake) {
      search(q: \\"undefined\\", limit: 5, offset: 0, filter: {nodeType: {type: \\"fake\\"}}, sortBy: {orderType: ASC, property: \\"jcr:title\\"}) {
        totalHits
        took
        facets {
          field
          type
          data {
            ... on TermValue {
              count
              value
            }
            ... on DateRangeValue {
              count
              range {
                from
                to
                name
              }
            }
          }
        }
        hits {
          id
          link
          displayableName
          excerpt
          score
          node {
            jcr_created: property(name: \\"jcr:created\\") {
              value
            }
          }
        }
      }
    }
  }
}
"
`;

exports[`Sort parameters tests Query without sort 1`] = `
"{
  jcr {
    searches(siteKey: \\"fake\\", language: \\"fake\\", workspace: fake) {
      search(q: \\"undefined\\", limit: 5, offset: 0, filter: {nodeType: {type: \\"fake\\"}}) {
        totalHits
        took
        facets {
          field
          type
          data {
            ... on TermValue {
              count
              value
            }
            ... on DateRangeValue {
              count
              range {
                from
                to
                name
              }
            }
          }
        }
        hits {
          id
          link
          displayableName
          excerpt
          score
          node {
            jcr_created: property(name: \\"jcr:created\\") {
              value
            }
          }
        }
      }
    }
  }
}
"
`;
